# spireslayer

./: README-PYPI.md  README.md  decks.py  editor.py  main.py  pyproject.toml  readme.md  usable note
.github/workflows/: python-package.yml
backups/: 2022-08-23 16:12:35.487065.json  2023-01-19 07:13:11.270793.json
example/: DEFECT.autosave  readable_save_file.json
src/: example.py  main.py  test_card.py
src/spireslayer/: card.py  decks.py  editor.py  save_editor.py  template.py
src/spireslayer/templates/: colorless_card.py  defect_card.py  defect_deck.py  ironclad_card.py  ironclad_deck.py  silent_card.py  silent_deck.py  watcher_card.py  watcher_deck.py
src/tests/: test_card.py  test_card_template.py  test_deck.py  test_save_editor.py
